# acorn-pups-firmware

./: .gitignore  BLE_LIFECYCLE.md  BLE_PRODUCTION_IMPLEMENTATION.md  Cargo.toml  README.md  TASK_COORDINATION.md  copy-binary.sh  cq  diagram.json  sdkconfig.defaults  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: DEVELOPMENT.md  FACTORY_RESET.md  FLASH.md  MQTT.md  README.md  SETUP.md  flash.md
firmware-dev/: Cargo.toml  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
firmware-dev/.cargo/: config.toml
firmware-dev/src/: main.rs
firmware-prod/: Cargo.toml  build.rs
firmware-prod/src/: ble_server.rs
scripts/: flash.sh
shared/: Cargo.toml
shared/src/: types.rs
src/: api.rs  ble_server.rs  connectivity.rs  device_api.rs  device_info.rs  led_manager.rs  main.rs  mqtt_certificates.rs  mqtt_client.rs  mqtt_manager.rs  nvs_debug.rs  reset_handler.rs  reset_manager.rs  reset_storage.rs  settings.rs  system_state.rs  volume_control.rs  wifi_client.rs  wifi_storage.rs
