[workspace]
resolver = "2"
members = [
    "firmware-prod",
    "firmware-dev", 
    "shared"
]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[workspace.dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync", "experimental", "alloc"] }
esp-idf-hal = "0.45"
esp-idf-sys = "0.36"
critical-section = { version = "1.1", features = ["std"], default-features = false }
embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }
embassy-time = { version = "0.4.0" }
embassy-sync = { version = "0.7" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
embedded-svc = { version = "0.28", features = ["std"] }

[workspace.dependencies.embuild]
version = "0.33"
features = ["espidf"]
