[package]
name = "pup"
version = "0.1.0"
authors = ["jmau949 <44676775+jmau949@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pup"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental", "esp-idf-svc/alloc"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync", "experimental", "alloc"] }
esp-idf-hal = "0.45"
esp-idf-sys = "0.36"
critical-section = { version = "1.1", features = ["std"], default-features = false }
embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }
embassy-time = { version = "0.4.0" }
embassy-sync = { version = "0.7" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
embedded-svc = { version = "0.28", features = ["std"] }
# Additional async utilities for MQTT coordination
embassy-futures = "0.1"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
